# Cryton

./: .coveragerc-integration  .coveragerc-unit  .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile-api-proxy  Dockerfile-cli  Dockerfile-hive  Dockerfile-worker  LICENSE  README.md  TODO.md  cryton-executor.service  cryton.schema.json  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.playground.yml  docker-compose.prerequisites.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  settings  settings.yml  tox.ini
.github/ISSUE_TEMPLATE/: 01-default.md  02-bug.md  03-feature.md
.github/PULL_REQUEST_TEMPLATE/: 01-default.md
.gitlab/issue_templates/: Bug.md  Default.md  Feature.md
.gitlab/merge_request_templates/: Default.md
cryton/cli/: cli.py  entrypoint.py
cryton/cli/commands/: execution_variable.py  log.py  plan.py  plan_template.py  run.py  stage.py  step.py  worker.py
cryton/cli/config/: __init__.py  endpoints.py  settings.py
cryton/cli/utility/: decorators.py  helpers.py
cryton/hive/: asgi.py  cli.py  entrypoint.py  manage.py  settings.py  urls.py  wsgi.py
cryton/hive/config/: settings.py
cryton/hive/cryton_app/: apps.py  exceptions.py  models.py  serializers.py  urls.py  util.py
cryton/hive/models/: __init__.py  abstract.py  model_base.py  plan.py  run.py  session.py  stage.py  step.py  worker.py
cryton/hive/services/: gunicorn.py  listener.py  scheduler.py
cryton/hive/triggers/: __init__.py  abstract.py  trigger_base.py  trigger_datetime.py  trigger_delta.py  trigger_http.py  trigger_immediate.py  trigger_metasploit.py  trigger_msf.py  trigger_time.py
cryton/hive/utility/: constants.py  creator.py  event.py  exceptions.py  logger.py  rabbit_client.py  scheduler_client.py  schemas.py  states.py  util.py  validator.py
cryton/lib/config/: logger.py  settings.py
cryton/lib/metasploit/: __init__.py  client.py
cryton/lib/utility/: enums.py  helpers.py  module.py  schemas.py
cryton/modules/atomic_red_team/: module.py
cryton/modules/command/: module.py
cryton/modules/empire/: module.py
cryton/modules/ffuf/: module.py
cryton/modules/medusa/: module.py
cryton/modules/metasploit/: module.py
cryton/modules/mod_cmd/: README.md  example.py  mod.py
cryton/modules/mod_ffuf/: example.py  mod.py  test_mod.py
cryton/modules/mod_medusa/: README.md  mod.py  test_mod.py
cryton/modules/mod_msf/: README.md  mod.py  requirements.txt  test_mod.py
cryton/modules/mod_nmap/: README.md  example.py  mod.py
cryton/modules/mod_script/: README.md  mod.py  requirements.txt
cryton/modules/mod_wpscan/: README.md  example.py  mod.py  test_mod.py
cryton/modules/nmap/: module.py
cryton/modules/script/: module.py
cryton/modules/wpscan/: module.py
cryton/worker/: cli.py  consumer.py  empire.py  entrypoint.py  event.py  task.py  worker.py
cryton/worker/config/: settings.py
cryton/worker/triggers/: __init__.py  listener_base.py  listener_http.py  listener_msf.py
cryton/worker/utility/: constants.py  exceptions.py  logger.py  module_util.py  util.py
docker/: Dockerfile
docker/api-proxy/: Dockerfile  hp-vhosts.conf  httpd.conf
docker/ci-python/: Dockerfile
docker/cli/: Dockerfile
docker/hive/: Dockerfile  entrypoint.sh
docker/playground/: Dockerfile  manual-execution.md
docker/playground/resources/: fill_tables.sql  pass_list.txt  rabbitmq.conf  run_example_scenario.sh  template.yml  user_list.txt
docker/production-base/: Dockerfile
docker/worker/: Dockerfile
docs/: .variables.yml  acknowledgements.md  architecture.md  contribution-guide.md  docker-images.md  dynamic-execution.md  dynamic_example.py  execution-example.md  index.md  installation.md  integrated-tools.md  license.md  logging.md  modules.md  playground.md  production.md  quick-start.md  settings.md  usage.md
docs/ansible/: ansible.md  inventory.yml
docs/components/: cli.md  core.md  frontend.md  modules.md  worker.md
docs/design-phase/: index.md  plan-instance.md  plan.md  stage.md  step.md  template.md
docs/development/: cli.md  core.md  e2e-testing.md  frontend.md  index.md  modules.md  worker.md
docs/execution-phase/: dynamic-execution.md  execution.md  index.md  reporting.md  run.md
docs/extra/: variables.yml
docs/getting-started/: ansible.md  docker-compose.yml  env  execution-example.md  quick-start.md  workflow.md
docs/interfaces/: cli.md  core-rest-api.md  frontend.md  index.md  rest-api.md  worker-rabbit-api.md
docs/modules/: .module_template.md  index.md
docs/modules/list/: atomic-red-team.md  atomic_red_team.md  command.md  empire.md  ffuf.md  medusa.md  metasploit.md  nmap.md  (+2 more)
docs/playground/: example-scenario.md  introduction.md
docs/usage/: index.md  workflows.md
examples/advanced-example/: inventory.yml  report.yml  template.yml
examples/basic-example/: inventory.yml  report.yml  template.yml
examples/datetime-trigger-example/: report.yml  template.yml
examples/dynamic-execution/: report.yml  stage.yml  step-init.yml  step-reusable.yml  template.yml
examples/dynamic-execution-example/: report.yml  stage.yml  template.yml
examples/execution-variables-example/: execution-variables.yml
examples/http-trigger-example/: template.yml
examples/metasploitable3-example/: report.yml
examples/msf-trigger-example/: inventory.yml  report.yml  template.yml
examples/sessions-example/: report.yml
public/: versions.json
public/2.x/: 404.html  index.html  sitemap.xml
public/3.x/: 404.html  index.html  sitemap.xml
public/latest/: 404.html  index.html
public/master/: 404.html  index.html  sitemap.xml
src/cryton_core/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
tests/: settings.py  template.yml
tests/e2e/: fixtures.py  test_functionality.py  test_modules.py  test_scenarios.py
tests_e2e/: cli.py  inventory.yml
tests_e2e/tests/: __init__.py  test.py  test_advanced.py  test_basic.py  test_datetime_trigger.py  test_empire.py  test_http_trigger.py  test_msf_trigger.py  test_run.py  test_run_control.py  test_run_execution.py
tests_e2e/util/: config.py  exceptions.py  helpers.py
(+418 files in other folders)
