[tool.poetry]
name = "cryton"
version = "2.0.0a1"
description = "Advanced scenario orchestrator"
authors = [
    "Ivo Nutár <nutar@ics.muni.cz>",
    "Milan Boháček <bohacek@ics.muni.cz>",
    "Jiří Rája <raja@ics.muni.cz>",
    "Andrej Tomči <tomci@ics.muni.cz>"
]
maintainers = [
    "Jiří Rája <raja@ics.muni.cz>",
    "Milan Boháček <bohacek@ics.muni.cz>"
]
license = "MIT"
homepage = "https://gitlab.ics.muni.cz/cryton"
repository = "https://gitlab.ics.muni.cz/cryton/cryton"
documentation = "https://cryton.gitlab-pages.ics.muni.cz/"
keywords = [
    "cryton", "hive", "advanced", "scheduler", "cli", "client", "orchestrator", "attacker"
]
readme = "README.md"

[tool.poetry.dependencies]  # 12.7
python = "^3.9"
python-dotenv = {version = "^1.0.0"}
click = {version = "^8.1.3"}
PyYAML = {version = "^6.0.1"}
APScheduler = {version = "^3.10.4", optional = true}
Django = {version = "^4.0.1", optional = true}
django-cors-headers = {version = "^4.3.0", optional = true}
djangorestframework = {version = "^3.14.0", optional = true}
drf-spectacular = {version = "^0.27.0", optional = true}
Jinja2 = {version = "^3.0.3", optional = true}
psycopg2-binary = {version = "^2.9.5", optional = true}
schema = {version = "^0.7.5", optional = true}  # TODO: remove, also remove from extras
structlog = {version = "^24.1.0", optional = true}
pytz = {version = "^2024.1", optional = true}
AMQPStorm = {version = "^2.10.4", optional = true}
uuid = {version = "^1.30", optional = true}
SQLAlchemy = {version = "^2.0.23", optional = true}
gunicorn = {version = "^21.2.0", optional = true}
uvicorn = {version = "^0.27.1", optional = true}
tzlocal = {version = "^5.2", optional = true}
pymetasploit3 = {version = "^1.0.3", optional = true}
bottle = {version = "^0.12.19", optional = true}
pyfiglet = {version = "^1.0.2", optional = true}
paramiko = {version = "^3.0.0", optional = true}
requests = {version = "^2.28.2", optional = true}
utinni-fork = {version = "^0.5.1", optional = true}
python3-nmap = {version = "^1.6.0", optional = true}
scp = {version = "^0.14.5", optional = true}
jsonschema = {version = "^4.21.1", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.3"
pytest-django = "^4.7.0"
pytest-mock = "^3.6.1"
model-bakery = "^1.4.0"
tox = "^4.4.4"
drf-spectacular-sidecar = "^2024.1.1"
black = "^24.4.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.3.1"
mkdocs-material = "^9.0.0"
mike = "^2.0.0"
mkdocs-macros-plugin = "^1.0.0"
mkdocs-include-markdown-plugin = "^6.0.3"

[tool.poetry.extras]
hive = [  # 107.2
    "APScheduler",
    "Django",
    "django-cors-headers",
    "djangorestframework",
    "drf-spectacular",
    "Jinja2",
    "psycopg2-binary",
    "schema",
    "structlog",
    "pytz",
    "amqpstorm",
    "uuid",
    "SQLAlchemy",
    "gunicorn",
    "uvicorn",
    "click",
    "python-dotenv",
    "jsonschema"
]
worker = [  # 52.3
    "pymetasploit3",
    "amqpstorm",
    "structlog",
    "schema",
    "click",
    "bottle",
    "pyfiglet",
    "paramiko",
    "requests",
    "utinni-fork",
    "python-dotenv",
    "jsonschema",
    # module-only dependencies
    "python3-nmap",
    "scp"
]
cli = [  # 20.4
    "requests",
    "click",
    "tzlocal",
    "pytz",
    "python-dotenv"
]

# TODO: rework `all` once the following issue get resolved https://github.com/python-poetry/poetry/issues/5471
all = [  # 145.2
    "APScheduler",
    "Django",
    "django-cors-headers",
    "djangorestframework",
    "drf-spectacular",
    "Jinja2",
    "psycopg2-binary",
    "schema",
    "structlog",
    "pytz",
    "amqpstorm",
    "uuid",
    "SQLAlchemy",
    "gunicorn",
    "uvicorn",
    "click",
    "python-dotenv",
    "pymetasploit3",
    "bottle",
    "pyfiglet",
    "paramiko",
    "requests",
    "utinni-fork",
    "tzlocal",
    "python3-nmap",
    "scp",
    "jsonschema"
]

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cryton-hive = 'cryton.hive.entrypoint:cli'
cryton-worker = 'cryton.worker.entrypoint:cli'
cryton-cli = 'cryton.cli.entrypoint:cli'

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
